# rprr_control_pi

./: .gitignore
src/rprr_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/rprr_arm_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  rprr_arm.srdf
src/rprr_arm_moveit_config/launch/: demo.launch.py  demo.launch.py.original  demo_backup.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  test_launch.py  warehouse_db.launch.py
src/rprr_description/: CMakeLists.txt  package.xml
src/rprr_description/urdf/: rprr_arm.ros2_control.xacro  rprr_arm.urdf  rprr_arm.urdf.xacro
src/rprr_viz/: CMakeLists.txt  package.xml
src/rprr_viz/launch/: display.launch.py
src/yz_motor_driver/: CMakeLists.txt  package.xml  setup.py
src/yz_motor_driver/config/: motor1.yaml  motor2.yaml  motor3.yaml  motor4.yaml
src/yz_motor_driver/include/yz_motor_driver/: can_bandwidth_planner.hpp  canopen_driver.hpp  cia402_driver.hpp  motor_driver.hpp  sync_master.hpp  sync_master_node.hpp  yz_motor_node.hpp
src/yz_motor_driver/launch/: bandwidth_planner.launch.py  four_motor.launch.py  sync_master.launch.py  test_motors_34.launch.py  two_motor.launch.py  two_motor_no_sync.launch.py  yz_driver.launch.py  yz_motor.launch.py
src/yz_motor_driver/scripts/: motor_initializer.py  test_motion.py  test_motors_34.py  test_sync_motion.py
src/yz_motor_driver/src/: bandwidth_planner_node.cpp  can_bandwidth_planner.cpp  canopen_driver.cpp  cia402_driver.cpp  motor_driver.cpp  sync_master.cpp  sync_master_node.cpp  yz_motor_driver_node.cpp  yz_motor_node.cpp
src/yz_motor_driver/srv/: SetPositionReachedParams.srv
src/yz_motor_driver/yz_motor_driver/scripts/: motor_initializer.py  test_motors_34.py
